objects/Checklist__c.object
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collect Enrollment Information</fullName>
                    <default>true</default>
                    <label>Collect Enrollment Information</label>
                </value>
                <value>
                    <fullName>Process Payment</fullName>
                </value>
                <value>
                    <fullName>Order Blood Test</fullName>
                </value>
                <value>
                    <fullName>Schedule Fat Extraction</fullName>
                </value>
                <value>
                    <fullName>Review Eligibility Test</fullName>
                </value>
                <value>
                    <fullName>Qualify Applicant	Review</fullName>
                </value>
                <value>
                    <fullName>Receive Fat Tissue Shipment</fullName>
                </value>
                <value>
                    <fullName>Harvest Stem Cells</fullName>
                </value>
                <value>
                    <fullName>Stem Cell Banked</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>countries__c</fullName>
        <label>countries</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Completed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>